# laconic

./: .travis.yml  Manifest.toml  Project.toml  README.md  precompile.jl  pyquante.jl
notebooks/: InteractivePlot.ipynb  Spin.ipynb  two_electron.ipynb
raconic/: Cargo.toml
raconic/src/: main.rs  plots.rs  spin.rs  utils.rs
src/: Laconic.jl  Symbolic.jl  atom.jl  base.jl  basis.jl  calculus.jl  display.jl  gaussian.jl  hydrogen.jl  operator.jl  rashbacoupling.ipynb  rubidium87.ipynb  rubidium87.jl  samples.jl  spin.jl  system.jl
test/: runtests.jl  test_base.jl  test_gaussian.jl  test_symbolic.jl
